disks/pcx86/dos/compaq/3.10/README.md
---
layout: page
title: COMPAQ MS-DOS 3.10
permalink: /disks/pcx86/dos/compaq/3.10/
machines:
  - id: deskpro386
    type: pcx86
    debugger: true
    config: /devices/pcx86/machine/compaq/deskpro386/ega/2048kb/debugger/machine.xml
    autoMount:
      A:
        path: /disks/pcx86/dos/compaq/3.10/COMPAQ-DOS310-DISK1.json
      B:
        path: /disks/pcx86/dos/compaq/3.10/COMPAQ-DOS310-DISK2.json
    autoStart: true
---

COMPAQ MS-DOS 3.10
------------------

This directory contains two different releases of COMPAQ MS-DOS 3.10:

* [COMPAQ MS-DOS 3.10 (dated 10-31-86)](#compaq-ms-dos-310-10-31-86)
* [COMPAQ MS-DOS 3.10 (dated 12-17-85)](#compaq-ms-dos-310-12-17-85)

However, the older release is not a distribution copy.  It is provided for historical interest only.

Of particular interest here is the copy of `CEMM` that we unearthed, the first publicly available utility
to make use of V86-mode on the 80386.

More information about CEMM is available at the [OS/2 Museum](http://www.os2museum.com/wp/original-cemm-unearthed/).

{% include machine.html id="deskpro386" %}

COMPAQ MS-DOS 3.10 (10-31-86)
-----------------------------

Released in 1986 by COMPAQ Computer Corp, this version of MS-DOS displays the following messages on boot:

	The COMPAQ Personal Computer MS-DOS
	Version 3.10
	
	(C) Copyright COMPAQ Computer Corp. 1982,83,84,85
	(C) Copyright Microsoft Corp. 1982,82,83,84,85

Directory listings of the two 360Kb distribution diskettes are provided below.

### Directory of COMPAQ MS-DOS 3.10 (Disk 1)

	 Volume in drive A has no label

	Directory of A:\

	IBMBIO   COM      9728 10-31-86  12:00p
	IBMDOS   COM     27760 10-31-86  12:00p
	COMMAND  COM     23210 10-31-86  12:00p
	VDISK    SYS      3420 10-31-86  12:00p
	ANSI     SYS      1631 10-31-86  12:00p
	ENHDISK  SYS      1569 10-31-86  12:00p
	CLOCK    SYS      1471 10-31-86  12:00p
	FORMAT   COM      8987 10-31-86  12:00p
	CHKDSK   COM      9435 10-31-86  12:00p
	SYS      COM      3823 10-31-86  12:00p
	DISKCOMP COM      2897 10-31-86  12:00p
	DISKCOPY COM      3006 10-31-86  12:00p
	COMP     COM      2470 10-31-86  12:00p
	MODE     COM      5481 10-31-86  12:00p
	FDISK    COM      7200 10-31-86  12:00p
	BACKUP   COM      5465 10-31-86  12:00p
	RESTORE  COM      5247 10-31-86  12:00p
	ASSIGN   COM      1509 10-31-86  12:00p
	SORT     EXE      1664 10-31-86  12:00p
	FIND     EXE      6403 10-31-86  12:00p
	MORE     COM       282 10-31-86  12:00p
	PRINT    COM      8291 10-31-86  12:00p
	TREE     COM      1756 10-31-86  12:00p
	LABEL    COM      1239 10-31-86  12:00p
	BASIC    COM      1424 10-31-86  12:00p
	BASICA   COM      1422 10-31-86  12:00p
	BASICA   EXE     66544 10-31-86  12:00p
	GRAPHICS COM      7204 10-31-86  12:00p
	EDLIN    COM      7261 10-31-86  12:00p
	SHARE    EXE      8304 10-31-86  12:00p
	SELECT   COM      1714 10-31-86  12:00p
	KEYBGR   COM     12745 10-31-86  12:00p
	KEYBFR   COM     12745 10-31-86  12:00p
	KEYBUK   COM     12745 10-31-86  12:00p
	KEYBIT   COM     12745 10-31-86  12:00p
	KEYBSP   COM     12745 10-31-86  12:00p
	GRAFTABL COM      1130 10-31-86  12:00p
	DISKINIT COM      9259 10-31-86  12:00p
	       38 file(s)     311931 bytes

	Total files listed:
	       38 file(s)     311931 bytes
	                       27648 bytes free

### Directory of COMPAQ MS-DOS 3.10 (Disk 2)

	 Volume in drive A has no label

	Directory of A:\

	SETCLOCK COM      2771 10-31-86  12:00p
	TAPE     EXE     42512 10-31-86  12:00p
	BASICA   COM      1422 10-31-86  12:00p
	SUBST    EXE     16611 10-31-86  12:00p
	JOIN     EXE     15971 10-31-86  12:00p
	ATTRIB   EXE     15091 10-31-86  12:00p
	EXE2BIN  EXE      2816 10-31-86  12:00p
	LINK     EXE     38144 10-31-86  12:00p
	DEBUG    COM     15552 10-31-86  12:00p
	RECOVER  COM      4226 10-31-86  12:00p
	CMPQADAP COM     22340 10-31-86  12:00p
	GRAFTABL COM      1130 10-31-86  12:00p
	GRAFTBNO COM      1130 10-31-86  12:00p
	KEYBDA   COM      8613 10-31-86  12:00p
	KEYBNO   COM      8613 10-31-86  12:00p
	KEYBSV   COM      8623 10-31-86  12:00p
	KEYBSU   COM      8623 10-31-86  12:00p
	DEMO     BAT        14 10-31-86  12:00p
	DEMO     BAS      6146 10-31-86  12:00p
	DEMO1    BAS     15611 10-31-86  12:00p
	DEMO2    BAS     15629 10-31-86  12:00p
	DEMO3    BAS     25625 10-31-86  12:00p
	USA      DAT     16128 10-31-86  12:00p
	EUROPE   DAT     16008 10-31-86  12:00p
	INTEREST BAS       384 10-31-86  12:00p
	WORDS             1306 10-31-86  12:00p
	       26 file(s)     311039 bytes

	Total files listed:
	       26 file(s)     311039 bytes
	                       34816 bytes free

### Directory of COMPAQ PC-DOS 3.20 Support Disk

	 Volume in drive A has no label

	Directory of A:\

	IBMBIO   COM      9728 03-27-86  12:00p
	IBMDOS   COM     27760 03-27-86  12:00p
	COMMAND  COM     23210 03-27-86  12:00p
	DISKCOPY COM      3006 08-14-86  12:00p
	YCR                  4 08-14-86  12:00p
	AUTOEXEC BAT        33 08-14-86  12:00p
	README   CPQ      1796 08-14-86  12:00p
	INSTALL  DOC      6790 08-14-86  12:00p
	DISKINIT COM      9259 08-14-86  12:00p
	SUPINST  BAT        76 08-14-86  12:00p
	ENHDISK  SYS      1569 08-14-86  12:00p
	FDISK    COM      7200 08-14-86  12:00p
	FORMAT   COM      8987 08-14-86  12:00p
	SYS      COM      3823 08-14-86  12:00p
	INST1    BAT      1875 08-14-86  12:00p
	INST1    SCR       645 08-14-86  12:00p
	INST2    SCR       479 08-14-86  12:00p
	INSTDEL  BAT        49 08-14-86  12:00p
	       18 file(s)     106289 bytes

	Total files listed:
	       18 file(s)     106289 bytes
	                      245760 bytes free

### Directory of COMPAQ DESKPRO 386 (1986)

	 Volume in drive A has no label

	Directory of A:\

	IBMBIO   COM      9728 03-27-86  12:00p
	IBMDOS   COM     27760 03-27-86  12:00p
	COMMAND  COM     23210 03-27-86  12:00p
	AUTOEXEC BAT        33 08-08-86  12:00p
	DISKINIT COM      9259 08-08-86  12:00p
	INST386  EXE     31808 08-08-86  12:00p
	CEMM     EXE     64736 08-08-86  12:00p
	CEMM     COM       963 08-08-86  12:00p
	VDISK    SYS      3420 08-08-86  12:00p
	README   CPQ      1788 08-08-86  12:00p
	1        BAT        74 08-08-86  12:00p
	2        BAT        73 08-08-86  12:00p
	3        BAT        71 08-08-86  12:00p
	4        BAT        71 08-08-86  12:00p
	5        BAT        71 08-08-86  12:00p
	DISKINIT SCR       670 08-08-86  12:00p
	INST386  SCR       713 08-08-86  12:00p
	CEMME    SCR       672 08-08-86  12:00p
	CEMMC    SCR       397 08-08-86  12:00p
	VDISK    SCR       567 08-08-86  12:00p
	       20 file(s)     176084 bytes

	Total files listed:
	       20 file(s)     176084 bytes
	                      173056 bytes free

---

COMPAQ MS-DOS 3.10 (12-17-85)
-----------------------------

This older 1985 release of COMPAQ MS-DOS 3.10 is from a 1.2Mb disk in our private collection.  Since this disk
was created for personal use, it also contains files unrelated to COMPAQ MS-DOS 3.10.  A directory listing is provided
[below](#directory-of-compaq-ms-dos-310-personal-disk).

This release displays the following messages on boot:

	The COMPAQ Personal Computer MS-DOS
	Version 3.10
	
	(C) Copyright COMPAQ Computer Corp. 1982,83,84,85
	(C) Copyright Microsoft Corp. 1982,82,83,84,85

which is *identical* to the newer 1986 release.  And most of the files are identical, so from a MS-DOS functionality
standpoint, there was no difference between these releases.

Also of interest, this disk contains two COMPAQ ENHDISK drivers:

* ENHDISK.OLD (dated 12-17-85)
* ENHDISK.SYS (dated 08-14-86)

However, even though the drivers are different, they both display the same message when loaded:

	The COMPAQ Personal Computer ENHDISK Version 3.10
	(C) Copyright COMPAQ Computer Corporation 1984, 1985

The ENHDISK.SYS file dated 08-14-86 is identical to ENHDISK.SYS dated 10-31-86 on the 3.10 distribution disks above.

### Directory of COMPAQ MS-DOS 3.10 (Personal Disk)

	 Volume in drive A has no label

	Directory of A:\

	IBMBIO   COM      9728 12-17-85  12:00p
	IBMDOS   COM     27760 12-17-85  12:00p
	COMMAND  COM     23210 12-17-85  12:00p
	CONFIG   SYS        55 10-15-87   5:52p
	DISKINIT COM      9179 12-17-85  12:00p
	VDISK    SYS      2926 12-17-85  12:00p
	ANSI     SYS      1593 12-17-85  12:00p
	ENHDISK  SYS      1569 08-14-86  12:00p
	CLOCK    SYS      1462 12-17-85  12:00p
	FORMAT   COM      8987 12-17-85  12:00p
	CHKDSK   COM      9435 12-17-85  12:00p
	SYS      COM      3823 12-17-85  12:00p
	DISKCOMP COM      2897 12-17-85  12:00p
	DISKCOPY COM      3006 12-17-85  12:00p
	COMP     COM      2470 12-17-85  12:00p
	MODE     COM      4180 12-17-85  12:00p
	FDISK    COM      7200 12-17-85  12:00p
	BACKUP   COM      5465 12-17-85  12:00p
	RESTORE  COM      5247 12-17-85  12:00p
	ASSIGN   COM      1509 12-17-85  12:00p
	SORT     EXE      1664 12-17-85  12:00p
	FIND     EXE      6403 12-17-85  12:00p
	MORE     COM       282 12-17-85  12:00p
	PRINT    COM      8291 12-17-85  12:00p
	TREE     COM      1756 12-17-85  12:00p
	LABEL    COM      1239 12-17-85  12:00p
	BASIC    COM      1424 12-17-85  12:00p
	BASICA   COM      1422 12-17-85  12:00p
	BASICA   EXE     66544 12-17-85  12:00p
	GRAPHICS COM      3048 12-17-85  12:00p
	EDLIN    COM      7261 12-17-85  12:00p
	SHARE    EXE      8304 12-17-85  12:00p
	ATTRIB   EXE     15091 12-17-85  12:00p
	SELECT   COM      1714 12-17-85  12:00p
	KEYBGR   COM      8085 12-17-85  12:00p
	KEYBFR   COM      8157 12-17-85  12:00p
	KEYBUK   COM      7551 12-17-85  12:00p
	KEYBIT   COM      7770 12-17-85  12:00p
	KEYBSP   COM      8149 12-17-85  12:00p
	KEYBDA   COM      8613 12-17-85  12:00p
	KEYBNO   COM      8613 12-17-85  12:00p
	KEYBSV   COM      8623 12-17-85  12:00p
	GRAFTBNO COM      1130 12-17-85  12:00p
	GRAFTABL COM      1130 12-17-85  12:00p
	SETCLOCK COM      2771 12-17-85  12:00p
	TAPE     EXE     28008 12-17-85  12:00p
	SUBST    EXE     16611 12-17-85  12:00p
	JOIN     EXE     15971 12-17-85  12:00p
	EXE2BIN  EXE      2816 12-17-85  12:00p
	LINK     EXE     38144 12-17-85  12:00p
	DEBUG    COM     15552 12-17-85  12:00p
	RECOVER  COM      4226 12-17-85  12:00p
	CMPQADAP COM     21940 12-17-85  12:00p
	DEMO     BAT        14 12-17-85  12:00p
	DEMO     BAS      6146 12-17-85  12:00p
	DEMO1    BAS     15611 12-17-85  12:00p
	DEMO2    BAS     15629 12-17-85  12:00p
	DEMO3    BAS     25625 12-17-85  12:00p
	USA      DAT     16128 12-17-85  12:00p
	EUROPE   DAT     16008 12-17-85  12:00p
	INTEREST BAS       384 12-17-85  12:00p
	WORDS             1306 12-17-85  12:00p
	ENHDISK  OLD      1569 12-17-85  12:00p
	KEYFIX   COM       104 01-30-87   1:57p
	AUTOEXEC BAT        38 10-15-87   6:05p
	PCPAL    EXE     63088 06-23-87  12:21p
	       66 file(s)     631654 bytes

	Total files listed:
	       66 file(s)     631654 bytes
	                      564736 bytes free

[Return to [COMPAQ MS-DOS Disks](/disks/pcx86/dos/compaq/)]
